# kai

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
docs/: index.html
examples/plugins/: timer.py
packaging/: build.py  entry.py
src/kai/: __init__.py  __main__.py  app.py  cli.py  config.py  intent.py  personas.py  tray.py
src/kai/actions/: __init__.py  custom.py  dictation.py  launcher.py  media.py  reader.py  registry.py  search.py  system.py
src/kai/audio/: __init__.py  mic.py  stt.py  tts.py  wake.py  yarn.py
src/kai/plugins/: __init__.py  base.py  loader.py
tests/: test_app.py  test_config.py  test_custom_commands.py  test_intent.py  test_personas.py  test_plugins.py  test_yarn.py
