[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kai"
version = "0.1.1"
description = "Local-first voice-powered desktop automation platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
desktop = [
    "pyautogui>=0.9.54",
    "pyttsx3>=2.90",
    "pystray>=0.19",
    "pillow>=10.0",
]
voice = [
    "openwakeword>=0.6",
    "faster-whisper>=1.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "keyboard>=0.13.5",
]
porcupine = [
    # Only if you already have a Picovoice access key (free tier retired June 2026)
    "pvporcupine>=3.0",
    "pvrecorder>=1.2",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
kai = "kai.cli:main"

[project.entry-points."kai.plugins"]
# Third-party plugins register here, e.g.:
# myplugin = "myplugin.kai_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
